--- a/weather-data/src/main/resources/application.yml
+++ b/weather-data/src/main/resources/application.yml
@@ -1,2 +1,13 @@
 server:
   port: 8082
+spring:
+  application:
+    name: weather-data
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      default-zone: http://127.0.0.1:8761/eureka/
+  instance:
+    prefer-ip-address: true
