--- a/weather-report/build.gradle
+++ b/weather-report/build.gradle
@@ -24,6 +24,12 @@ repositories {
 }
 
 
+dependencyManagement {
+    imports {
+        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Dalston.SR5'
+    }
+}
+
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web'
 
@@ -37,4 +43,6 @@ dependencies {
     compile "org.springframework.boot:spring-boot-devtools"
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
+
+    compile 'org.springframework.cloud:spring-cloud-starter-eureka-server'
 }
