--- a/weather-data/build.gradle
+++ b/weather-data/build.gradle
@@ -44,4 +44,6 @@ dependencies {
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 
 	compile 'org.springframework.cloud:spring-cloud-starter-eureka-server'
+
+	compile 'org.springframework.cloud:spring-cloud-starter-hystrix'
 }
