--- a/weather-report/build.gradle
+++ b/weather-report/build.gradle
@@ -45,4 +45,6 @@ dependencies {
     testCompile('org.springframework.boot:spring-boot-starter-test')
 
     compile 'org.springframework.cloud:spring-cloud-starter-eureka-server'
+
+    compile 'org.springframework.cloud:spring-cloud-starter-hystrix'
 }
