使用feign实现为服务调用

--- a/weather-data/build.gradle
+++ b/weather-data/build.gradle
@@ -46,4 +46,6 @@ dependencies {
 	compile 'org.springframework.cloud:spring-cloud-starter-eureka-server'
 
 	compile 'org.springframework.cloud:spring-cloud-starter-hystrix'
+
+	compile 'org.springframework.cloud:spring-cloud-starter-feign'
 }
