--- a/weather-report/build.gradle
+++ b/weather-report/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     compile 'org.springframework.cloud:spring-cloud-starter-eureka-server'
 
     compile 'org.springframework.cloud:spring-cloud-starter-hystrix'
+    compile 'org.springframework.cloud:spring-cloud-starter-feign'
 }
